solve height layout issue

--- a/src/Components/notes.css
+++ b/src/Components/notes.css
@@ -1,25 +1,29 @@
 .notes-parent {
   display: flex;
+  height: 100%;
 }
 
 .textarea {
-  width: 100%;
   height: 100%;
+  width: 100%;
   font-size: 16px;
   padding: 10px;
-  box-sizing: border-box;
   resize: none;
+  border: none;
 }
 
 .textarea::placeholder {
   color: #999;
 }
 
-.notes-textarea {
-  flex: 2;
+.notes-component {
   border: 2px solid black;
 }
+
+.notes-textarea {
+  flex: 2;
+}
+
 .notes-archive {
   flex: 1;
-  border: 2px solid black;
 }
